Tue Sep 11 14:21:17 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - clients/upsclient.h: add a typedef UPSCONN on UPSCONN_t since
   the renaming of the former broke the external client application
   compatibility. This is only temporary, and client applications
   will have to adapt their code, using pkg-config / libupclient-config
   and some #defines.
 - UPGRADING: add a (doubled for both 2.2.0 and 2.2.1) message to warn
   client applications developers of the above change.

Tue Sep 11 12:47:10 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - data/driver.list: Added MGE Office Protection Systems compatibility
   information.

Sun Sep  9 19:17:34 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/apcsmart.h: Missed this one in r1097.
 - drivers/serial.[ch]: Added handling modem control lines, to make
   backporting drivers from the trunk easier.
 - data/new-drivers.txt: Document new status flags and modem control
   line functions.

Sun Sep  9 18:43:51 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite_usb.c: Fix potential segfault.

Sat Sep  8 18:58:17 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsmon.c: Only change the polling frequency if the OL/OB
   state changes.
 - data/driver.list: Added a couple of Belkin models as supported,
   as well as Jasuny USPS.
 - drivers/apc-hid.c: The vendor specific formatting modified the
   hd->Product that was passed to it (which should not happen here).
   Also changed 'ups.power.nominal' to 'ups.realpower.nominal' for
   some CyberPower UPS'es that support this.
 - drivers/apcsmart.c: Added support for some vintage UPS'es.
 - drivers/belkin-hid.c: Added two productid's for supported models,
   fixed memory leak in vendor specific formatting and fixed faulty
   input report for low battery that resurfaced now that we have a
   report buffer.
 - drivers/hidparser.c: Fix uninitialized data causing usbhid-ups to