@@ -1,3 +1,11 @@
+Wed Sep 12 22:09:11 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
+
+ - drivers/megatec.c: backported from the trunk.
+ - drivers/megatec_usb.c: added ser_set_dtr/ser_set_rts stubs required
+   by the megatec backport.
+ - data/driver.list: added some models supported by megatec already
+   listed in the trunk.
+
 Tue Sep 11 14:21:17 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>
 
  - clients/upsclient.h: add a typedef UPSCONN on UPSCONN_t since
